# software-develeopment-template

./: .pre-commit-config.yaml  Makefile  README.md  dockerfile  pyproject.toml
.github/workflows/: ci.yml  main.yml
src/: settings.py
tests/: test_mock.py
