[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Andres Velez <andres.velez.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
pre-commit = "^2.20.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line_length = 88
